--- a/index.html
+++ b/index.html
@@ -10,9 +10,24 @@
   </head>
   <body>
     <div id="app">
-      <h1>{{ product }}</h1>
+      <div class="nav-bar"></div>
 
-      <p>{{ descritopn }}</p>
+      <div class="product-display">
+        <div class="product-container">
+          <div class="product-image">
+            <img :src="image">
+          </div>
+          <div class="product-info">
+            <h1>{{ product }}</h1>
+            <p v-if="inventory > 10">In Stock</p>
+            <p v-else-if="inventory <= 10 && inventory > 0">Almost sold out</p>
+            <p v-else>Out of Stock</p>
+            <p v-show="onSale">ON SALE!!</p>
+            <p>{{ descritopn }}</p>
+            <p><a :href="url">Go to Google</a></p>
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- Import Js -->
