--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
             <p v-else-if="inventory <= 10 && inventory > 0">Almost sold out</p>
             <p v-else>Out of Stock</p>
             <p v-show="onSale">ON SALE!!</p>
+            <ul>
+              <li v-for="detail in details">{{ detail }}</li>
+            </ul>
+            <div v-for="variant in variants" :key="variant.id">{{ variant.color }}</div>
+            <ul>
+              <li v-for="(size, index) in sizes" :key="index">{{ size }}</li>
+            </ul>
             <p>{{ descritopn }}</p>
             <p><a :href="url">Go to Google</a></p>
           </div>
